deny-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingres
spec:
  podSelector: { }
  policyTypes:
    - Ingress
