network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: silly-demo
  namespace: demo
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: client
  podSelector:
    matchLabels:
      app: server
